chain assertions & use toList over collect(..)